# XrayAtten

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  atten_coeff_local.py  atten_coeff_online.py  attenuation_vs_thickness.py  energy_absorption_vs_thickness.py  multilayer_transmission.py  pyproject.toml  requirements.txt
configs/examples/: attenuation_vs_thickness.yaml  coefficients_batch.yaml  energy_absorption_vs_thickness.yaml  multilayer_attenuation_profile.yaml
data/: elements.csv
data/nist_local/coeff/: Ac.txt  Ag.txt  Ar.txt  At.txt  Br.txt  C.txt  Ca.txt  Cl.txt  Cr.txt  Cs.txt  Cu.txt  Er.txt  Eu.txt  F.txt  Fe.txt  Ga.txt  Gd.txt  H.txt  He.txt  Ho.txt  I.txt  In.txt  Kr.txt  Lu.txt  Mg.txt  (+21 more)
data/spectra/: 70.csv
docs/: CONFIGURATION.md  METHODS_VALIDATION.md  MIGRATION.md  REPRODUCIBILITY.md
input/: example.xlsx  吸收模板-WC(1).xlsx
src/xrayatten/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  interpolation.py  local_nist.py  models.py  online_xcom.py  output.py  physics.py  plotting.py  provenance.py  workflows.py
support/: __init__.py  attenuation_io_local.py  attenuation_io_online.py  coefficient_files.py  transmission_local.py  transmission_online.py
tests/: conftest.py  test_attenuation_thickness_workflow.py  test_coefficients_workflow.py  test_composition.py  test_energy_absorption_workflow.py  test_interpolation.py  test_local_data_integrity.py  test_multilayer_workflow.py  test_nist_water_reference.py  test_online_comparison.py  test_yaml_validation.py
tests/fixtures/: nist_water_reference.json  xcom_response_fixture.html
(+47 files in other folders)
