[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrayatten"
version = "0.1.0"
description = "YAML-driven local NIST v1.4 X-ray attenuation workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
online = [
    "beautifulsoup4>=4.12",
    "requests>=2.32",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
xrayatten = "xrayatten.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xrayatten = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
